--- a/mip-jjpz/mip-jjpz.less
+++ b/mip-jjpz/mip-jjpz.less
@@ -688,10 +688,9 @@
   .fold_content p a {
     font-size: 14px;
   }
-  .fhpsContent .ui-grid-row,.fhpsContent .ui_remark{
-    border-bottom: 1px solid #ddd;
-  }
+
   .fhpsContent p {
+    border-bottom: 1px solid #ddd;
     font-size: 12px;
     padding: 6px 0;
   }
@@ -862,6 +861,7 @@
     width: 16px;
     height: 26.5px;
     margin: 0 auto;
+    background: url(../images/myProfile_bgs.png) no-repeat;
     background-position: -69px 0;
     background-size: 105px 21px;
   }
@@ -902,7 +902,7 @@
   }
 
   .tabContent.loading {
-    background: url('./mip-jjpz/img/loading2.gif') center center no-repeat;
+    background: url(http://j5.dfcfw.com/j1/images/loading2.gif) center center no-repeat;
     min-height: 50px;
   }
 
@@ -1565,7 +1565,7 @@
     position: absolute;
     width: 21px;
     height: 26px;
-    background: url('./mip-jjpz/img/20150831173017783.png') no-repeat left center;
+    background: url('http://j5.dfcfw.com/app/20150831173017783.png') no-repeat left center;
   }
 
   .tuiguang_xz span:first-child, .tuiguang_xz span:first-child a {
@@ -1681,9 +1681,6 @@
 
   footer .foot_desc p.foot_time .foot_time_s {
     font-family: "Arial";
-  }
-  footer .foot_desc .foot_title a{
-    color: #ff4400;
   }
   .flexShare {
     position: absolute;
